--- a/MyApplication/app/src/main/res/layout/custom_login_info.xml
+++ b/MyApplication/app/src/main/res/layout/custom_login_info.xml
@@ -13,7 +13,7 @@
         android:id="@+id/et_login_q1"
         android:layout_width="@dimen/px500"
         android:layout_height="@dimen/px85"
-        android:background="#@drawable/round"
+        android:background="@drawable/round"
         android:textSize="@dimen/px40"
         android:textColor="@color/backgroudpink"
         android:layout_marginTop="@dimen/px5"
