--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,6 @@
             android:layout_width="@dimen/px250"
             android:layout_height="@dimen/px250"
             android:layout_gravity="center"
-            android:src="@drawable/touxiang68x68px"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +56,7 @@
         android:layout_width="@dimen/px500"
         android:layout_height="@dimen/px85"
         android:layout_marginTop="@dimen/px5"
-        android:background="#@drawable/round"
+        android:background="@drawable/round"
         android:gravity="center_vertical"
         android:hint="@string/str_username_hint"
         android:textColor="@color/backgroudpink"
@@ -84,7 +83,7 @@
         android:layout_width="@dimen/px500"
         android:layout_height="@dimen/px85"
         android:layout_marginTop="@dimen/px5"
-        android:background="#@drawable/round"
+        android:background="@drawable/round"
         android:gravity="center_vertical"
         android:textColor="@color/backgroudpink"
         android:textSize="@dimen/px40"
@@ -129,6 +128,29 @@
         app:layout_constraintLeft_toRightOf="@id/tv_birthday"
         app:layout_constraintTop_toBottomOf="@id/tv_login_q3"
         />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="@dimen/px250"
+        android:layout_height="@dimen/px85"
+        android:text="@string/str_btn_choose"
+        android:textSize="@dimen/px40"
+        android:background="#DFF1558B"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_time_choose"
+        android:layout_marginTop="@dimen/px50"
+        />
+    <ProgressBar
+        android:id="@+id/process_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:max="100"
+        app:layout_constraintLeft_toRightOf="@id/btn_login"
+        app:layout_constraintTop_toBottomOf="@id/btn_time_choose"
+        android:layout_marginTop="@dimen/px30"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
