--- a/MyApplication/app/src/main/res/values/dimens.xml
+++ b/MyApplication/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="px30">30px</dimen>
     <dimen name="px60">60px</dimen>
     <dimen name="px125">125px</dimen>
+    <dimen name="px25">25px</dimen>
 </resources>
