--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -109,48 +109,45 @@
         android:id="@+id/tv_birthday"
         android:layout_width="@dimen/px500"
         android:layout_height="@dimen/px85"
-        app:layout_constraintTop_toBottomOf="@id/tv_login_q3"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:background="@drawable/round"
-        app:layout_constraintRight_toRightOf="parent"
         android:textSize="@dimen/px50"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_login_q3" />
 
     <Button
         android:id="@+id/btn_time_choose"
         android:layout_width="@dimen/px150"
         android:layout_height="@dimen/px85"
-        android:text="@string/str_btn_choose"
-        android:textSize="@dimen/px40"
         android:background="#DFF1558B"
+        android:text="@string/str_btn_choose"
         android:textColor="@color/white"
-
+        android:textSize="@dimen/px40"
         app:layout_constraintLeft_toRightOf="@id/tv_birthday"
-        app:layout_constraintTop_toBottomOf="@id/tv_login_q3"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tv_login_q3" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="@dimen/px250"
         android:layout_height="@dimen/px85"
-        android:text="@string/str_btn_choose"
-        android:textSize="@dimen/px40"
+        android:layout_marginTop="@dimen/px50"
         android:background="#DFF1558B"
+        android:text="@string/str_btn_choose"
         android:textColor="@color/white"
+        android:textSize="@dimen/px40"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_time_choose"
-        android:layout_marginTop="@dimen/px50"
-        />
+        app:layout_constraintTop_toBottomOf="@id/btn_time_choose" />
+
     <ProgressBar
         android:id="@+id/process_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:layout_marginTop="@dimen/px30"
         android:max="100"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@id/btn_login"
-        app:layout_constraintTop_toBottomOf="@id/btn_time_choose"
-        android:layout_marginTop="@dimen/px30"/>
+        app:layout_constraintTop_toBottomOf="@id/btn_time_choose" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
