--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="notVricewhite">#90FCFAF2</color>
     <color name="backgroudpink">#DFFB9EBE</color>
     <color name="white">#ffffff</color>
+    <color name="blue">#006DCC</color>
 </resources>
